# lifeos

./: .gitignore  README.md  SETUP.md
.github/workflows/: ci.yml  release.yml
apps/backend/: .env.example  main.py  requirements.txt
apps/backend/agents/: daily_brief.py  insight_agent.py
apps/backend/api/: events.py  routes.py
apps/backend/core/: __init__.py  database.py  embedding.py  ingestion.py  llm_client.py  models.py  plugin_base.py  plugin_registry.py  retrieval.py
apps/backend/plugins/builtin/github/: plugin.py
apps/backend/plugins/builtin/google_calendar/: plugin.py
apps/backend/plugins/builtin/markdown_files/: plugin.py
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/ChatInterface/: index.tsx
apps/desktop/src/components/DailyBrief/: index.tsx
apps/desktop/src/components/Insights/: index.tsx
apps/desktop/src/components/PluginManager/: index.tsx
apps/desktop/src/components/Settings/: index.tsx
apps/desktop/src/components/Timeline/: index.tsx
apps/desktop/src/hooks/: useLifeOSAPI.ts
apps/desktop/src/stores/: useStore.ts
docs/: PLUGIN_GUIDE.md
