[package]
name = "lifeos"
version = "0.1.0"
description = "LifeOS - Your second brain, finally with a nervous system."
authors = ["LifeOS Contributors"]
license = "MIT"
repository = "https://github.com/lifeos-app/lifeos"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lifeos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
